--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+
+body {
+  background-image: url(assets/background.jpg);
+  background-size: cover;
+}
+
+#page {
+  box-sizing: border-box;
+  width: 800px;
+  padding: 24;
+  background-color: #F0E8C2;
+  border-radius: 10px;
+  margin: 48px auto;
+  
+}
 img {
   border-radius: 16px;
 }
